feat: swagger domain, add auth, moving files, regenerate docs
